js/js.translator/testData/incremental/invalidation/fastPath1/lib2/l2.1.kt
fun qux() = foo() + 2
